<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:text="@string/text_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/text_color"
        android:text="@string/text_2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textStyle="bold|italic"
        android:text="@string/text_3"/>
<!--    bold|italic는 굵게&기울임-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:typeface="serif"
        android:text="@string/text_4"/>
<!--    typeface="serif"은 글꼴 설정-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:singleLine="true"
        android:text="@string/text_5"/>
<!--    한줄로 만들기-->
</LinearLayout>